--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -10,14 +10,14 @@
   </div>
 </ng-template>
 
-<app-custom-stepper #cdkStepper (selectionChange)="onStepChange($event)">
+<app-custom-stepper class="edit-application" #cdkStepper (selectionChange)="onStepChange($event)">
   <cdk-step label="Parcel Details">
-    <div *ngIf="cdkStepper.selectedIndex === editAppSteps.AppParcel">
+    <div *ngIf="cdkStepper.selectedIndex === editAppSteps.AppParcel || previousStep === editAppSteps.AppParcel">
       <app-parcel-details [$application]="$application"></app-parcel-details>
     </div>
   </cdk-step>
   <cdk-step label="Other Parcels in the Community">
-    <div *ngIf="cdkStepper.selectedIndex === editAppSteps.OtherParcel">
+    <div *ngIf="cdkStepper.selectedIndex === editAppSteps.OtherParcel || previousStep === editAppSteps.OtherParcel">
       <app-other-parcels [$application]="$application"></app-other-parcels>
     </div>
   </cdk-step>
