--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -17,11 +17,13 @@
   (beforeSwitchStep)="onBeforeSwitchStep($event)"
 >
   <cdk-step label="Parcel Details">
+    <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.AppParcel">
       <app-parcel-details [$application]="$application"></app-parcel-details>
     </div>
   </cdk-step>
   <cdk-step label="Other Parcels in the Community">
+    <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.OtherParcel">
       <app-other-parcels [$application]="$application"></app-other-parcels>
     </div>
