save on step change with buttons

--- a/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
@@ -274,9 +274,11 @@
 <div class="button-container">
   <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
   <div>
-    <button mat-stroked-button matStepperPrevious color="primary">
+    <button mat-stroked-button color="primary" (click)="onNavigateToStep(currentStep - 1)">
       Previous<span class="mobile-hidden"> Step</span>
     </button>
-    <button mat-flat-button matStepperNext color="primary">Next<span class="mobile-hidden"> Step</span></button>
+    <button mat-flat-button color="primary" (click)="onNavigateToStep(currentStep + 1)">
+      Next<span class="mobile-hidden"> Step</span>
+    </button>
   </div>
 </div>
