--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -19,43 +19,58 @@
   <cdk-step label="Parcel Details">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.AppParcel">
-      <app-parcel-details [$application]="$application"></app-parcel-details>
+      <app-parcel-details
+        [$application]="$application"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+      ></app-parcel-details>
     </div>
   </cdk-step>
   <cdk-step label="Other Parcels in the Community">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.OtherParcel">
-      <app-other-parcels [$application]="$application"></app-other-parcels>
+      <app-other-parcels
+        [$application]="$application"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+      ></app-other-parcels>
     </div>
   </cdk-step>
   <cdk-step label="Primary Contact">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.PrimaryContact">
-      <app-primary-contact [$application]="$application"></app-primary-contact>
+      <app-primary-contact
+        [$application]="$application"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+      ></app-primary-contact>
     </div>
   </cdk-step>
   <cdk-step label="Government">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.Government">
-      <app-select-government [$application]="$application"></app-select-government>
+      <app-select-government
+        [$application]="$application"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+      ></app-select-government>
     </div>
   </cdk-step>
   <cdk-step label="Land Use">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.LandUse">
-      <app-land-use [$application]="$application"></app-land-use>
+      <app-land-use [$application]="$application" (navigateToStep)="onBeforeSwitchStep($event)"></app-land-use>
     </div>
   </cdk-step>
   <cdk-step label="Proposal">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.Proposal">
-      <app-nfu-proposal [$application]="$application"></app-nfu-proposal>
+      <app-nfu-proposal [$application]="$application" (navigateToStep)="onBeforeSwitchStep($event)"></app-nfu-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="cdkStepper.selectedIndex === editAppSteps.Attachments">
-      <app-other-attachments [$application]="$application"></app-other-attachments>
+      <app-other-attachments
+        [$application]="$application"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+      ></app-other-attachments>
     </div>
   </cdk-step>
   <cdk-step label="Review & Submit">
