--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
@@ -50,7 +50,9 @@
     <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
       <div></div>
-      <button mat-flat-button matStepperNext color="primary">Next<span class="mobile-hidden"> Step</span></button>
+      <button mat-flat-button color="primary" (click)="onNavigateToStep(currentStep + 1)">
+        Next<span class="mobile-hidden"> Step</span>
+      </button>
     </div>
   </div>
 </div>
