Update view application page
* Add new navigation for mobile
* Add new buttons
* Add L/FNG Info / Status
* Update main page layouts

--- a/portal-frontend/src/app/app.component.html
+++ b/portal-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class='site-layout'>
   <app-header></app-header>
-  <div cdkScrollable id="appBody" class='main-content'>
+  <div id="appBody" class='main-content'>
     <router-outlet></router-outlet>
   </div>
   <app-footer id="appFooter"></app-footer>
