--- a/portal-frontend/src/app/features/home/home.component.scss
+++ b/portal-frontend/src/app/features/home/home.component.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/colors';
 @import '../../../styles/functions';
 @import '../../../styles/typography';
+@import '../../../styles/navigation-wrapper';
 
 .header-row {
   .learn-more-wrapper {
@@ -47,72 +48,6 @@
       display: inline-block;
       width: rem(193);
       height: rem(43);
-    }
-  }
-}
-
-.navigation-wrapper {
-  ::ng-deep .mat-tab-body-content {
-    overflow-x: hidden;
-  }
-
-  ::ng-deep .mat-tab-header-pagination {
-    display: none !important;
-  }
-
-  ::ng-deep .mat-tab-header {
-    overflow-x: scroll !important;
-    display: flex;
-    flex-wrap: nowrap;
-    border-bottom: none;
-  }
-
-  ::ng-deep .mat-tab-label-container {
-    overflow: visible !important;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row !important;
-    flex-flow: row wrap !important;
-    justify-content: space-between;
-  }
-
-  ::ng-deep .mat-tab-header::-webkit-scrollbar {
-    display: none !important;
-  }
-
-  ::ng-deep .mat-ink-bar {
-    display: none;
-  }
-  ::ng-deep .mat-tab-labels {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex-flow: row wrap;
-    justify-content: space-between;
-
-    ::ng-deep .mat-tab-label {
-      width: 100%;
-      margin-top: rem(24);
-      height: rem(32);
-      background: $primary-color;
-      opacity: 1;
-      color: $white;
-    }
-
-    ::ng-deep .mat-tab-label.mat-tab-label-active {
-      background-color: $primary-color-dark;
-    }
-  }
-
-  @media screen and (min-width: $desktopBreakpoint) {
-    ::ng-deep .mat-tab-labels {
-      display: flex;
-      flex-wrap: nowrap;
-      justify-content: space-between;
-
-      .mat-tab-label {
-        width: 33%;
-      }
     }
   }
 }
