--- a/portal-frontend/src/app/features/view-application/view-application.component.scss
+++ b/portal-frontend/src/app/features/view-application/view-application.component.scss
@@ -1,9 +1,10 @@
 @import '../../../styles/functions';
 @import '../../../styles/colors';
 @import '../../../styles/typography';
+@import '../../../styles/navigation-wrapper';
 
 .content {
-  margin-top: rem(24);
+  margin: rem(24) 0;
 }
 
 .absolute {
@@ -44,9 +45,31 @@
   }
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: rem(24);
+}
+
 .buttons {
   display: flex;
   justify-content: space-between;
+  flex-direction: column-reverse;
+
+  button {
+    width: 100%;
+    margin-bottom: rem(16) !important;
+  }
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    flex-direction: row;
+  }
+}
+
+.warning {
+  background-color: rgba($accent-color-light, 0.5);
+  padding: 16px;
 }
 
 .view-box {
@@ -82,6 +105,7 @@
   justify-content: center;
   align-items: center;
   height: rem(56);
+  z-index: 2;
 
   div {
     display: flex;
@@ -95,6 +119,98 @@
 
     .mat-icon {
       margin-left: rem(6);
+    }
+  }
+}
+
+.page-selector {
+  width: 100%;
+  margin-bottom: rem(24);
+}
+
+.change-step {
+  width: 100%;
+}
+
+.no-comment {
+  color: $grey-dark;
+  font-style: italic;
+}
+
+.tractor {
+  width: 100%;
+  margin-bottom: rem(16);
+}
+
+section {
+  margin-bottom: rem(24);
+}
+
+.mat-expansion-panel {
+  margin-bottom: rem(24);
+}
+
+.link {
+  color: $link-color;
+  cursor: pointer;
+}
+
+.document {
+  margin-bottom: rem(8);
+}
+
+:host::ng-deep {
+  .mat-expansion-panel {
+    box-shadow: none;
+  }
+
+  .mat-expansion-panel.mat-expanded {
+    background-color: $grey-light;
+    border: 1px solid $black;
+  }
+
+  .mat-expansion-panel-header {
+    border: 1px solid $black;
+  }
+
+  .mat-expansion-panel-header.mat-expanded,
+  .mat-expansion-panel-header.mat-expanded:focus,
+  .mat-expansion-panel-header.mat-expanded:hover {
+    background-color: $grey-light;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 48px; //Overriding Angular style that is in PX
+  }
+}
+
+.review-table {
+  margin: rem(12) 0 rem(20) 0;
+  background-color: $grey-light;
+  display: grid;
+  grid-row-gap: rem(32);
+  grid-template-columns: 1fr;
+
+  .edit-button {
+    display: flex;
+    justify-content: center;
+  }
+
+  .subheading2 {
+    margin-bottom: rem(4) !important;
+  }
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    padding: rem(16);
+    margin: rem(24) 0 rem(40) 0;
+    grid-template-columns: 1fr 1fr;
+
+    .full-width {
+      grid-column: 1/3;
+    }
+
+    .edit-button {
+      grid-column: 1/3;
     }
   }
 }
