--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -17,14 +17,9 @@ html,
 body {
   position: relative;
   height: auto;
-  min-height: 100% !important;
+  min-height: 100vh;
   scroll-behavior: smooth;
   margin: 0;
-
-  @media screen and (min-height: $midBreakpoint) and (min-width: rem(500)) {
-    height: 100%;
-    overflow: hidden;
-  }
 }
 
 body {
