--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="_owners">
+<table class="owner-table" mat-table [dataSource]="_owners">
   <ng-container matColumnDef="position">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">{{ element.position }}</td>
