--- a/portal-frontend/src/app/features/review-application/review-application.component.scss
+++ b/portal-frontend/src/app/features/review-application/review-application.component.scss
@@ -64,7 +64,7 @@
     display: none;
 
     @media screen and (min-width: $tabletBreakpoint) {
-      display: contents;
+      display: initial
     }
   }
 
