--- a/portal-frontend/src/app/shared/custom-stepper/custom-stepper.component.html
+++ b/portal-frontend/src/app/shared/custom-stepper/custom-stepper.component.html
@@ -1,4 +1,4 @@
-<section title="custom-stepper">
+<section>
   <header class="header">
     <div class="stepper-wrapper">
       <button class="stepper-controls" (click)="scrollLeft()">
