--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -1,9 +1,11 @@
-<section title="application details">
+<section>
   <app-parcel
     [$application]="$application"
     [isValidate]="isValidate"
     (isParcelDetailsValid)="parcelValidation($event)"
   ></app-parcel>
+</section>
+<section>
   <app-parcel
     [$application]="$application"
     [isValidate]="isValidate"
@@ -11,3 +13,185 @@
     (isParcelDetailsValid)="parcelValidation($event)"
   ></app-parcel>
 </section>
+<section>
+  <h3>3. Primary Contact</h3>
+  <div *ngIf="application" class="review-table">
+    <div class="subheading2 grid-1">Primary Contact</div>
+    <div class="grid-double" *ngIf="primaryContact?.type?.code !== 'AGEN'">
+      {{ primaryContact?.displayName }}
+      <app-no-data [showRequired]="true" *ngIf="!primaryContact"></app-no-data>
+    </div>
+    <ng-container *ngIf="primaryContact">
+      <div *ngIf="primaryContact.type.code === 'AGEN'">Third Party Agent</div>
+      <ng-container *ngIf="primaryContact.type.code === 'AGEN'">
+        <div class="full-width subheading1">Agent Contact Information</div>
+        <div class="subheading2 grid-1">First Name</div>
+        <div class="grid-double">
+          {{ primaryContact.firstName }}
+          <app-no-data [showRequired]="true" *ngIf="!primaryContact.firstName"></app-no-data>
+        </div>
+        <div class="subheading2 grid-1">Last Name</div>
+        <div class="grid-double">
+          {{ primaryContact.lastName }}
+          <app-no-data [showRequired]="true" *ngIf="!primaryContact.lastName"></app-no-data>
+        </div>
+        <div class="subheading2 grid-1">Organization (Optional)</div>
+        <div class="grid-double">
+          {{ primaryContact.organizationName }}
+          <app-no-data [showRequired]="false" *ngIf="!primaryContact.organizationName"></app-no-data>
+        </div>
+        <div class="subheading2 grid-1">Phone</div>
+        <div class="grid-double">
+          {{ primaryContact.phoneNumber }}
+          <app-no-data [showRequired]="true" *ngIf="!primaryContact.phoneNumber"></app-no-data>
+        </div>
+        <div class="subheading2 grid-1">Email</div>
+        <div class="grid-double">
+          {{ primaryContact.email }}
+          <app-no-data [showRequired]="true" *ngIf="!primaryContact.email"></app-no-data>
+        </div>
+      </ng-container>
+    </ng-container>
+    <div class="subheading2 grid-1">Authorization Letter(s)</div>
+    <div class="grid-double">
+      <app-no-data
+        [showRequired]="application.owners.length > 1"
+        *ngIf="authorizationLetters.length === 0"
+      ></app-no-data>
+      <div *ngFor="let file of authorizationLetters">
+        <a (click)="openFile(file.uuid)">{{ file.fileName }}</a>
+      </div>
+    </div>
+    <div class="edit-button">
+      <button mat-flat-button (click)="onNavigateToStep(2)" color="accent">Edit Section</button>
+    </div>
+  </div>
+</section>
+<section>
+  <h3>4. Government</h3>
+  <div *ngIf="application" class="review-table">
+    <div class="subheading2 grid-1">Local of First Nation Government</div>
+    <div class="grid-double">
+      {{ localGovernment?.name }}
+      <app-no-data [showRequired]="true" *ngIf="!localGovernment"></app-no-data>
+    </div>
+    <div class="edit-button">
+      <button mat-flat-button (click)="onNavigateToStep(3)" color="accent">Edit Section</button>
+    </div>
+  </div>
+</section>
+<section>
+  <h3>5. Land Use</h3>
+  <div *ngIf="application" class="review-table">
+    <div class="full-width">
+      <h4>Land Use of Parcel(s) under Application</h4>
+    </div>
+    <div class="subheading2 grid-1">
+      Quantify and describe in detail all agriculture that currently takes place on the parcel(s).
+    </div>
+    <div class="grid-double">
+      {{ application.parcelsAgricultureDescription }}
+      <app-no-data [showRequired]="true" *ngIf="!application.parcelsAgricultureDescription"></app-no-data>
+    </div>
+    <div class="subheading2 grid-1">
+      Quantify and describe in detail all agricultural improvements made to the parcel(s).
+    </div>
+    <div class="grid-double">
+      {{ application.parcelsAgricultureImprovementDescription }}
+      <app-no-data [showRequired]="true" *ngIf="!application.parcelsAgricultureImprovementDescription"></app-no-data>
+    </div>
+    <div class="subheading2 grid-1">
+      Quantify and describe all non-agricultural uses that currently take place on the parcel(s).
+    </div>
+    <div class="grid-double">
+      {{ application.parcelsNonAgricultureUseDescription }}
+      <app-no-data [showRequired]="true" *ngIf="!application.parcelsNonAgricultureUseDescription"></app-no-data>
+    </div>
+  </div>
+  <div *ngIf="application" class="review-table scrollable">
+    <div class="full-width">
+      <h4>Land Use of Adjacent Parcels</h4>
+    </div>
+    <div class="grid-1 subheading2"></div>
+    <div class="grid-2 subheading2">Main Land Use Type</div>
+    <div class="grid-3 subheading2">Specific Activity</div>
+    <div class="grid-1 subheading2">North</div>
+    <div class="grid-2">
+      {{ application.northLandUseType }}
+      <app-no-data [showRequired]="true" *ngIf="!application.northLandUseType"></app-no-data>
+    </div>
+    <div class="grid-3">
+      {{ application.northLandUseTypeDescription }}
+      <app-no-data [showRequired]="true" *ngIf="!application.northLandUseTypeDescription"></app-no-data>
+    </div>
+    <div class="grid-1 subheading2">East</div>
+    <div class="grid-2">
+      {{ application.eastLandUseType }}
+      <app-no-data [showRequired]="true" *ngIf="!application.eastLandUseType"></app-no-data>
+    </div>
+    <div class="grid-3">
+      {{ application.eastLandUseTypeDescription }}
+      <app-no-data [showRequired]="true" *ngIf="!application.eastLandUseTypeDescription"></app-no-data>
+    </div>
+    <div class="grid-1 subheading2">South</div>
+    <div class="grid-2">
+      {{ application.southLandUseType }}
+      <app-no-data [showRequired]="true" *ngIf="!application.southLandUseType"></app-no-data>
+    </div>
+    <div class="grid-3">
+      {{ application.southLandUseTypeDescription }}
+      <app-no-data [showRequired]="true" *ngIf="!application.southLandUseTypeDescription"></app-no-data>
+    </div>
+    <div class="grid-1 subheading2">West</div>
+    <div class="grid-2">
+      {{ application.westLandUseType }}
+      <app-no-data [showRequired]="true" *ngIf="!application.westLandUseType"></app-no-data>
+    </div>
+    <div class="grid-3">
+      {{ application.westLandUseTypeDescription }}
+      <app-no-data [showRequired]="true" *ngIf="!application.westLandUseTypeDescription"></app-no-data>
+    </div>
+    <div class="edit-button">
+      <button mat-flat-button (click)="onNavigateToStep(4)" color="accent">Edit Section</button>
+    </div>
+  </div>
+</section>
+<section>
+  <h3>6. Proposal</h3>
+  <app-nfu-details [application]="application"></app-nfu-details>
+</section>
+<section>
+  <h3>7. Optional Documents</h3>
+  <div *ngIf="application" class="review-table scrollable">
+    <div class="grid-1 subheading2">Type</div>
+    <div class="grid-2 subheading2">Description</div>
+    <div class="grid-3 subheading2">File Name</div>
+    <ng-container *ngFor="let file of otherFiles">
+      <div class="grid-1">{{ file.type }} <app-no-data [showRequired]="true" *ngIf="!file.type"></app-no-data></div>
+      <div class="grid-2">
+        {{ file.description }}
+        <app-no-data [showRequired]="true" *ngIf="!file.description"></app-no-data>
+      </div>
+      <div class="grid-3">
+        <a (click)="openFile(file.uuid)">{{ file.fileName }}</a>
+      </div>
+    </ng-container>
+    <div class="full-width">
+      <app-no-data [showRequired]="false" *ngIf="otherFiles.length === 0"></app-no-data>
+    </div>
+    <div class="edit-button">
+      <button mat-flat-button (click)="onNavigateToStep(6)" color="accent">Edit Section</button>
+    </div>
+  </div>
+</section>
+<div class="button-container">
+  <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
+  <div>
+    <button mat-stroked-button color="primary" (click)="onNavigateToStep(6)">
+      Previous<span class="mobile-hidden"> Step</span>
+    </button>
+    <button mat-flat-button color="primary" (click)="onSubmitToAlcs()">
+      Submit
+    </button>
+  </div>
+</div>
