--- a/portal-frontend/src/app/features/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/application-details/application-details.component.scss
@@ -52,3 +52,87 @@
     }
   }
 }
+
+:host::ng-deep {
+  .review-table {
+    padding: rem(8);
+    margin: rem(12) 0 rem(20) 0;
+    background-color: $grey-light;
+    display: grid;
+    grid-row-gap: rem(24);
+    grid-column-gap: rem(16);
+    grid-template-columns: 1fr;
+    word-wrap: break-word;
+    hyphens: auto;
+
+    &.scrollable {
+      grid-template-columns: max-content max-content max-content;
+      overflow-x: auto;
+
+      .full-width {
+        grid-column: 1/4;
+      }
+
+      .edit-button {
+        grid-column: 1/4;
+      }
+    }
+
+    .edit-button {
+      display: flex;
+      justify-content: center;
+
+      button {
+        width: 100%;
+
+        @media screen and (min-width: $tabletBreakpoint) {
+          width: unset;
+        }
+      }
+    }
+
+    .subheading2 {
+      margin-bottom: rem(4) !important;
+    }
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      padding: rem(16);
+      margin: rem(24) 0 rem(40) 0;
+      grid-template-columns: minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr) minmax(rem(60), 1fr);
+
+      &.scrollable {
+        .full-width {
+          grid-column: 1/5;
+        }
+
+        .edit-button {
+          grid-column: 1/5;
+        }
+      }
+
+      .full-width {
+        grid-column: 1/5;
+      }
+
+      .grid-double {
+        grid-column: 2/5;
+      }
+
+      .grid-1 {
+        grid-column: 1/2;
+      }
+
+      .grid-2 {
+        grid-column: 2/3;
+      }
+
+      .grid-3 {
+        grid-column: 3/5;
+      }
+
+      .edit-button {
+        grid-column: 1/5;
+      }
+    }
+  }
+}
