--- a/portal-frontend/src/app/features/edit-application/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-application/review-and-submit/review-and-submit.component.html
@@ -1,3 +1,3 @@
-<section title="Review & Submit">
+<section>
   <app-application-details [$application]="$application"></app-application-details>
 </section>
