ability to reset parcel, owner table improvements

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -298,9 +298,10 @@
     row-gap: rem(24);
   }
 
-  .owner-table {
+  .owner-table-wrapper {
     display: block;
     overflow: auto;
+    width: 100%;
   }
 
   .land-use-form {
