--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.html
@@ -1,52 +1,54 @@
-<table class="owner-table" mat-table [dataSource]="_owners">
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-  </ng-container>
+<div class="owner-table-wrapper">
+  <table class="owner-table" mat-table [dataSource]="_owners">
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="displayName">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.displayName }}</td>
-  </ng-container>
+    <ng-container matColumnDef="displayName">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.displayName }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="phone">
-    <th mat-header-cell *matHeaderCellDef>Phone</th>
-    <td mat-cell *matCellDef="let element">{{ element.phoneNumber | mask : '(000) 000-0000' }}</td>
-  </ng-container>
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef>Phone</th>
+      <td mat-cell *matCellDef="let element">{{ element.phoneNumber | mask : '(000) 000-0000' }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef>Email</th>
-    <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-  </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef>Type</th>
-    <td mat-cell *matCellDef="let element">{{ element.type.label }}</td>
-  </ng-container>
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef>Type</th>
+      <td mat-cell *matCellDef="let element">{{ element.type.label }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
-    <td mat-cell class="actions" *matCellDef="let element">
-      <button [disabled]="_disabled" (click)="onEdit(element)" mat-flat-button color="primary">Edit</button>
-      <button
-        [disabled]="_disabled"
-        *ngIf="parcelUuid"
-        (click)="onRemove(element.uuid)"
-        mat-stroked-button
-        color="accent"
-      >
-        Remove
-      </button>
-      <button [disabled]="_disabled" *ngIf="!parcelUuid" (click)="onDelete(element)" mat-stroked-button color="warn">
-        Delete
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell class="actions" *matCellDef="let element">
+        <button [disabled]="_disabled" (click)="onEdit(element)" mat-flat-button color="primary">Edit</button>
+        <button
+          [disabled]="_disabled"
+          *ngIf="parcelUuid"
+          (click)="onRemove(element.uuid)"
+          mat-stroked-button
+          color="accent"
+        >
+          Remove
+        </button>
+        <button [disabled]="_disabled" *ngIf="!parcelUuid" (click)="onDelete(element)" mat-stroked-button color="warn">
+          Delete
+        </button>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-  <tr class="mat-row" *matNoDataRow>
-    <td class="no-data-text" colspan="6">No owner information</td>
-  </tr>
-</table>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="no-data-text" colspan="6">No owner information</td>
+    </tr>
+  </table>
+</div>
